# mesgAnon

./: .env  Cargo.toml
src/: main.rs  socket_handler.rs
static/: chat.js  style.css
templates/: 404.html  501.html  index.html
