[package]
name = "messageapp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
futures = "0.3"
rmpv= {version="1.3.0",features=["with-serde"]}
serde = {version="1.0.219",features=["derive"]}
socketioxide = {version="0.17.2",features = ["msgpack"]}
tokio = {version="1.46.1",features=["full"]}
tower-http = { version = "0.5", features = ["fs","trace"] }
tera = "1.19"
dotenv = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features=["env-filter"] }




